--- a/axiom-evi-nanox/CMakeLists.txt
+++ b/axiom-evi-nanox/CMakeLists.txt
@@ -1,5 +1,5 @@
-add_custom_target(Nanox ALL
-		  DEPENDS Extrae GASNET)
+add_custom_target(Nanox ALL)
+#		  DEPENDS Extrae GASNET)
 
 SET(installdir "${CMAKE_CURRENT_LIST_DIR}/pkg")
 
@@ -7,13 +7,15 @@ SET(installdir "${CMAKE_CURRENT_LIST_DIR}/pkg")
 #========================= DEBUG ========================
 
 add_custom_command(TARGET "Nanox"
-                   COMMAND ./bootstrap && ./configure --disable-performance --with-gasnet=${CMAKE_CURRENT_LIST_DIR}/../axiom-evi-gasnet/pkg/usr/local/
+                   COMMAND ./bootstrap && ./configure --disable-performance --with-gasnet=${CMAKE_CURRENT_LIST_DIR}/../axiom-evi-gasnet/pkg/usr/local/gasnet-debug/
 						      --with-gasnet-include=${CMAKE_CURRENT_LIST_DIR}/../axiom-evi-gasnet/pkg/usr/include/gasnet-debug
 			      			      --with-gasnet-lib=${CMAKE_CURRENT_LIST_DIR}/../axiom-evi-gasnet/pkg/usr/lib/gasnet-debug
-						      --disable-instrumentation --disable-instrumentation-debug CXXFLAGS='-fPIC' CFLAGS='-fPIC' --with-gasnet=/usr/local/gasnet-debug/
+						      --disable-instrumentation --disable-instrumentation-debug CXXFLAGS='-fPIC' CFLAGS='-fPIC'
 							--prefix=/usr --with-extrae=${CMAKE_CURRENT_LIST_DIR}/../axiom-evi-extrae/pkg/usr/
+							#CXXFLAGS='-I/${CMAKE_CURRENT_LIST_DIR}/../axiom-evi-nic/include/'							
+							#CFLAGS='-I/${CMAKE_CURRENT_LIST_DIR}/../axiom-evi-nic/include/'
+							CPPFLAGS='-I/${CMAKE_CURRENT_LIST_DIR}/../axiom-evi-nic/include/'
 							LDFLAGS='-L${CMAKE_CURRENT_LIST_DIR}/../axiom-allocator/src/ -L${CMAKE_CURRENT_LIST_DIR}/../axiom-evi-allocator-lib/src -L${CMAKE_CURRENT_LIST_DIR}/../axiom-evi-nic/axiom_user_library/')
-
 add_custom_command(TARGET "Nanox"
                    COMMAND make install CXXFLAGS='-fPIC' CFLAGS='-fPIC' DESTDIR=${installdir} && make clean)
 
@@ -23,8 +25,12 @@ add_custom_command(TARGET "Nanox"
 add_custom_command(TARGET "Nanox"
                    COMMAND ./bootstrap && ./configure --with-gasnet-include=${CMAKE_CURRENT_LIST_DIR}/../axiom-evi-gasnet/pkg/usr/include/gasnet-performance/
                                                       --with-gasnet-lib=${CMAKE_CURRENT_LIST_DIR}/../axiom-evi-gasnet/pkg/usr/lib/gasnet-performance/
+						      --with-gasnet=${CMAKE_CURRENT_LIST_DIR}/../axiom-evi-gasnet/pkg/usr/local/gasnet-performance/
                                                       --disable-instrumentation --disable-instrumentation-debug --disable-debug --with-gasnet=/usr/local/gasnet-performance/
-						      --prefix=/usr --with-extrae=${CMAKE_CURRENT_LIST_DIR}/../axiom-evi-extrae/pkg/usr/
+	 					      --prefix=/usr --with-extrae=${CMAKE_CURRENT_LIST_DIR}/../axiom-evi-extrae/pkg/usr/
+							#CXXFLAGS='-I/${CMAKE_CURRENT_LIST_DIR}/../axiom-evi-nic/include/'
+							#CFLAGS='-I/${CMAKE_CURRENT_LIST_DIR}/../axiom-evi-nic/include/'
+							CPPFLAGS='-I/${CMAKE_CURRENT_LIST_DIR}/../axiom-evi-nic/include/'
 					              LDFLAGS='-L${CMAKE_CURRENT_LIST_DIR}/../axiom-allocator/src/ -L${CMAKE_CURRENT_LIST_DIR}/../axiom-evi-allocator-lib/src -L${CMAKE_CURRENT_LIST_DIR}/../axiom-evi-nic/axiom_user_library/')
 
 add_custom_command(TARGET "Nanox"
@@ -36,11 +42,14 @@ add_custom_command(TARGET "Nanox"
 
 add_custom_command(TARGET "Nanox"
                    COMMAND ./bootstrap && ./configure  --enable-debug  --disable-performance --enable-instrumentation-debug
-                                                      --with-gasnet-include=${CMAKE_CURRENT_LIST_DIR}/../axiom-evi-gasnet/pkg/usr/include/gasnet-performance/
-                                                      --with-gasnet-lib=${CMAKE_CURRENT_LIST_DIR}/../axiom-evi-gasnet/pkg/usr/lib/gasnet-performance/
-						      --with-gasnet=/usr/local/gasnet-performance/
+							--with-gasnet=${CMAKE_CURRENT_LIST_DIR}/../axiom-evi-gasnet/pkg/usr/local/gasnet-performance/
+                                                        --with-gasnet-include=${CMAKE_CURRENT_LIST_DIR}/../axiom-evi-gasnet/pkg/usr/include/gasnet-performance/
+                                                        --with-gasnet-lib=${CMAKE_CURRENT_LIST_DIR}/../axiom-evi-gasnet/pkg/usr/lib/gasnet-performance/
 							--prefix=/usr --with-extrae=${CMAKE_CURRENT_LIST_DIR}/../axiom-evi-extrae/pkg/usr/
-						LDFLAGS='-L${CMAKE_CURRENT_LIST_DIR}/../axiom-allocator/src/ -L${CMAKE_CURRENT_LIST_DIR}/../axiom-evi-allocator-lib/src -L${CMAKE_CURRENT_LIST_DIR}/../axiom-evi-nic/axiom_user_library/')
+							#CXXFLAGS='-I/${CMAKE_CURRENT_LIST_DIR}/../axiom-evi-nic/include/'
+							#CFLAGS='-I/${CMAKE_CURRENT_LIST_DIR}/../axiom-evi-nic/include/'
+							CPPFLAGS='-I/${CMAKE_CURRENT_LIST_DIR}/../axiom-evi-nic/include/'
+							LDFLAGS='-L${CMAKE_CURRENT_LIST_DIR}/../axiom-allocator/src/ -L${CMAKE_CURRENT_LIST_DIR}/../axiom-evi-allocator-lib/src -L${CMAKE_CURRENT_LIST_DIR}/../axiom-evi-nic/axiom_user_library/')
 
 add_custom_command(TARGET "Nanox"
                    COMMAND make install DESTDIR=${installdir} && make clean)
